{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 11,
  "lineage": "b720cc27-8f80-0737-8c06-17330f0cabff",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terra-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/networkInterfaces/terra-nic",
            "internal_domain_name_suffix": "ft5kjoe3yqnufhmmwmp1fehnfg.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/publicIPAddresses/terrapublic",
                "subnet_id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/virtualNetworks/terravn/subnets/terravn-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus2",
            "name": "terra-nic",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "terra-62563"
          },
          "dependencies": [
            "azurerm_public_ip.terrapublic",
            "azurerm_resource_group.terrarg",
            "azurerm_subnet.terravn_subnet",
            "azurerm_virtual_network.terravn",
            "random_integer.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terransg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/networkSecurityGroups/terransg",
            "location": "westus2",
            "name": "terransg",
            "resource_group_name": "terra-62563",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terrarg",
            "random_integer.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "terransg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/networkSecurityGroups/terransg/securityRules/Allow-rdp",
            "name": "Allow-rdp",
            "network_security_group_name": "terransg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "terra-62563",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terransg",
            "azurerm_resource_group.terrarg",
            "random_integer.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terrapublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/publicIPAddresses/terrapublic",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "terrapublic",
            "resource_group_name": "terra-62563",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.terrarg",
            "random_integer.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terravn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/virtualNetworks/terravn/subnets/terravn-subnet",
            "name": "terravn-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "terra-62563",
            "virtual_network_name": "terravn"
          },
          "dependencies": [
            "azurerm_resource_group.terrarg",
            "azurerm_virtual_network.terravn",
            "random_integer.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "terra-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/virtualNetworks/terravn/subnets/terravn-subnet",
            "network_security_group_id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/networkSecurityGroups/terransg",
            "subnet_id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/virtualNetworks/terravn/subnets/terravn-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.terransg",
            "azurerm_resource_group.terrarg",
            "azurerm_subnet.terravn_subnet",
            "azurerm_virtual_network.terravn",
            "random_integer.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terravn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b8a4fe2c-c49d-421b-9d8c-b31fb290ed2e",
            "id": "/subscriptions/43c517cc-4ab2-44b4-b218-97d7419c1b2d/resourceGroups/terra-62563/providers/Microsoft.Network/virtualNetworks/terravn",
            "location": "westus2",
            "name": "terravn",
            "resource_group_name": "terra-62563"
          },
          "dependencies": [
            "azurerm_resource_group.terrarg",
            "random_integer.name"
          ]
        }
      ]
    }
  ]
}